--- a/public/index.html
+++ b/public/index.html
@@ -54,11 +54,11 @@
 
     <!-- inject:js -->
     <script src="src/js/app.js"></script>
-    <script src="src/js/HomeController.js"></script>
-    <script src="src/js/LunchPollController.js"></script>
-    <script src="src/js/LunchPollStatusController.js"></script>
-    <script src="src/js/Restaurant.js"></script>
-    <script src="src/js/Vote.js"></script>
+    <script src="src/js/controllers/HomeController.js"></script>
+    <script src="src/js/controllers/LunchPollController.js"></script>
+    <script src="src/js/controllers/LunchPollStatusController.js"></script>
+    <script src="src/js/services/Restaurant.js"></script>
+    <script src="src/js/services/Vote.js"></script>
     <!-- endinject -->
 
     <!-- endbuild -->
